--- a/public/css/index.scss
+++ b/public/css/index.scss
@@ -301,7 +301,7 @@ a{
       background: url("../images/structures/icons/slider-tabs.png") no-repeat center -363px;
     }
     .tab-film .g-icon-wrap{
-      background: #4bca7e url("../images/structures/icons/slider-tabs.png") no-repeat center -281px;
+      background: url("../images/structures/icons/slider-tabs.png") no-repeat center -281px;
     }
     .tab-products,.tab-daily,.tab-learn{
       background:#ffc029;
